tests/baselines/reference/invalidTypeOfTarget.errors.txt
==== tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.ts (9 errors) ====
    var x1: typeof {};
                   ~
!!! error TS1003: Identifier expected.
    var x2: typeof (): void;
                   ~
!!! error TS1003: Identifier expected.
                           ~
!!! error TS1005: '=>' expected.
    var x3: typeof 1;
                   ~
!!! error TS1003: Identifier expected.
    var x4: typeof '';
                   ~~
!!! error TS1003: Identifier expected.
    var x5: typeof [];
                   ~
!!! error TS1003: Identifier expected.
    var x6: typeof null;
                   ~~~~
!!! error TS1003: Identifier expected.
    var x7: typeof function f() { };
                   ~~~~~~~~
!!! error TS1003: Identifier expected.
    var x8: typeof /123/;
                   ~
!!! error TS1003: Identifier expected.